--- a/MemberMVC4/src/main/webapp/css/style.css
+++ b/MemberMVC4/src/main/webapp/css/style.css
@@ -1,13 +1,13 @@
 /* Google Web Font */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:300,400,500,700,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 /* Fontawesome 4.7 */
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 /* reset CSS */
 *{box-sizing: border-box;}
 a{ text-decoration: none; color: #222;}
 h1,h2,h3,h4,h5,h6{ margin: 0; font-weight: normal;}
-button{ cursor: pointer; outline: none; border: none;}
+button,input[type='button']{ cursor: pointer; outline: none; border: none;}
 input,textarea,select{
   outline: none;
 }
@@ -88,7 +88,6 @@ table{
 
 }
 
-
 table th{
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
@@ -97,6 +96,7 @@ tr a{
   font-weight: 600;
 
 }
+
 tr a:hover{
   text-decoration: underline;
 }
@@ -106,6 +106,16 @@ tr .btn-del{
 tr .btn-del:hover{
   background-color: crimson;
   color: white;
+}
+
+.input-group{
+  display: flex;
+}
+
+.input-group .btn-submit{
+  margin-left: 10px;
+  font-size: 0.8em;
+  height: 40px;
 }
 
 form{
@@ -119,9 +129,7 @@ form table{
   margin: 20px;
   margin: auto;
 }
-form table td{
-  /* border: 1px solid black; */
-}
+
 form input{
   width: 100%;
   padding: 10px ;
@@ -133,7 +141,6 @@ form input{
   font-size: 1.2em;
 }
 .btn-group{
-  text-align: right;
 }
 
 .btn-submit:hover{
@@ -164,5 +171,6 @@ footer{
 	opacity: 0.8;
 
   height: 10vh;
+  z-index: -1;
 
 }
